testament/tests/shouldfail/toutput.nim
discard """
  targets: "c"
  output: '''
  done
  '''
"""

echo "broken"
